--- a/niveles.html
+++ b/niveles.html
@@ -5,10 +5,60 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/estilos.css">
+    <title>Niveles</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/niveles.css">
 </head>
 
-<body>
+<body style="max-width: 1500px;">
+    <div class="main" style="width: 1349px !important;height: 585px !important;">
+        <div id="" style="width: 1092.800px !important;">
+            <div id="contenedorjuego" style="width: 1092.800px !important;">
+                <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./img/Nivel1Tamplate.png" height="585px" class="d-block w-100" alt="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885__480.jpg">
+                            <div class="carousel-caption d-none d-md-block" id="window">
+                                <h5>En este Primer Nivel</h5>
+                                <p style="text-shadow:1px 1px 1px rgba(150, 150, 150, 1)">Se tocaran y veran los temas de Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid cumque quidem ipsam explicabo. Esse possimus nulla tenetur voluptatum praesentium maxime, dicta veniam animi asperiores.
+                                    Eum unde officiis cupiditate fugiat iste!
+                                </p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885__480.jpg" height="585px" class="d-block w-100" alt="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885__480.jpg">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Second slide label</h5>
+                                <p>Some representative placeholder content for the second slide.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885__480.jpg" height="585px" class="d-block w-100" alt="https://cdn.pixabay.com/photo/2015/04/23/22/00/tree-736885__480.jpg">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Third slide label</h5>
+                                <p>Some representative placeholder content for the third slide.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js " integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj " crossorigin="anonymous "></script>
 
 </body>
 
