--- a/nombre_jugador.html
+++ b/nombre_jugador.html
@@ -22,10 +22,10 @@
             <span class="card-title activator grey-text text-darken-4">Presiona el personaje</span>
             <div class="card-image">
                 <div class="carousel" style="display: flex">
-                    <a style="background: grey;height:260px;justify-content:center" class="carousel-item" href="#one!" onclick="selectCharacter(1)"><img style="height:240px;width:200px;justify-content: center;" src="img/character/character_1.png"></a>
-                    <a style="background: grey;height:260px;justify-content:center" class="carousel-item" href="#two!" onclick="selectCharacter(2)"><img src="img/character/character_2.png"></a>
-                    <a style="background: grey;height:260px;justify-content:center" class="carousel-item" href="#one!" onclick="selectCharacter(1)"><img style="height:240px;width:200px;justify-content: center;" src="img/character/character_1.png"></a>
-                    <a style="background: grey;height:260px;justify-content:center" class="carousel-item" href="#two!" onclick="selectCharacter(2)"><img src="img/character/character_2.png"></a>
+                    <a style="background: url(https://cdn.dribbble.com/users/4870/screenshots/13934993/media/88b2b48611d4c7ae1467ab97c146cedb.jpg?compress=1&resize=200x300);height:260px;justify-content:center" class="carousel-item" href="#one!" onclick="selectCharacter(1)"><img style="height:240px;width:200px;justify-content: center;" src="img/character/character_1.png"></a>
+                    <a style="background: url(https://cdn.dribbble.com/users/4870/screenshots/14785422/media/1afc85ca56f6ae89cc0f9f8701f37c15.jpg?compress=1&resize=200x300);height:260px;justify-content:center" class="carousel-item" href="#two!" onclick="selectCharacter(2)"><img src="img/character/character_2.png"></a>
+                    <a style="background: url(https://cdn.dribbble.com/users/4870/screenshots/13934993/media/88b2b48611d4c7ae1467ab97c146cedb.jpg?compress=1&resize=200x300);height:260px;justify-content:center" class="carousel-item" href="#one!" onclick="selectCharacter(1)"><img style="height:240px;width:200px;justify-content: center;" src="img/character/character_1.png"></a>
+                    <a style="background: url(https://cdn.dribbble.com/users/4870/screenshots/14785422/media/1afc85ca56f6ae89cc0f9f8701f37c15.jpg?compress=1&resize=200x300);height:260px;justify-content:center" class="carousel-item" href="#two!" onclick="selectCharacter(2)"><img src="img/character/character_2.png"></a>
                 </div>
             </div>
         </div>
