--- a/jugando.html
+++ b/jugando.html
@@ -114,7 +114,6 @@
             </div>
         </div>
     </div>
-    <button onclick="final_question()">Void</button>
     <script src="/js/funciones.js "></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js " integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj " crossorigin="anonymous "></script>
     <script src="/js/data.js"></script>
@@ -258,7 +257,7 @@
 
                 }
             } else if (pregunta_inicial == 21) {
-                location.href = "/mapa.html";
+                final_question()
             } else {
                 setTimeout(() => {
                     location.reload()
@@ -358,10 +357,10 @@
         }
         move();
 
-        function final_question(){
+        function final_question() {
             let question = localStorage.getItem('question');
-            console.log("question "+question)
-            if(question >= 21){
+            console.log("question " + question)
+            if (question >= 21) {
                 location.href = "/result_examn.html";
             }
         }
